--- a/css/base.css
+++ b/css/base.css
@@ -28,3 +28,17 @@ body {
     width: 90%;
   }
 }
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+ul {
+  list-style: none;
+  margin: 1rem 0;
+}
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.5;
+}
